plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.1'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.0.4'
	implementation 'commons-fileupload:commons-fileupload:1.5'
	implementation 'commons-io:commons-io:2.11.0'
	implementation 'org.jsoup:jsoup:1.15.4'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.1.2'
	implementation 'org.mockito:mockito-core:5.4.0'
	implementation 'org.seleniumhq.selenium:selenium:2.0rc2'
	implementation 'org.gaixie.json:json:1.0.0'
	implementation 'org.springframework.boot:spring-boot-starter:3.1.2'
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	compileOnly 'org.projectlombok:lombok:1.18.26'

	implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.4'

	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	runtimeOnly 'com.mysql:mysql-connector-j:8.0.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
	testImplementation 'io.projectreactor:reactor-test:3.5.4'
}

tasks.named('test') {
	useJUnitPlatform()
}
